<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="fi.climbstationsolutions.climbstation.ui.init.InitViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/fragment_background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/read_qr"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/viewFinder"
                app:layout_constraintStart_toStartOf="@+id/viewFinder"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/serial_sheet_top"
            android:padding="8dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <View
                android:layout_width="200dp"
                android:layout_height="4dp"
                android:background="@drawable/sheet_top_block"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/enter_serial_no"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/etSerialNo"
                app:layout_constraintStart_toStartOf="@+id/etSerialNo"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSerialNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#EBEBEB"
                android:ems="10"
                android:hint="@string/example_no"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfo" />

            <Button
                android:id="@+id/btnContinue"
                style="@style/Theme.ClimbStation.Button.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:enabled="false"
                android:text="@string/continue_txt"
                app:layout_constraintEnd_toEndOf="@+id/etSerialNo"
                app:layout_constraintStart_toStartOf="@+id/etSerialNo"
                app:layout_constraintTop_toBottomOf="@+id/etSerialNo"
                tools:enabled="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loadingSpinner"
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isVisible="@{viewModel.loading}"
            tools:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>