...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Theme.ClimbStation.Button.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
...
